# tensor

./: .clang-format  CMakeLists.txt  format.sh  lines  lines.cpp  synopsis.h  test.sh
src/: concepts.hpp  data.hpp  linear.hpp  operators.hpp  shape.hpp  stride.hpp  tensor.hpp  tensorbase.hpp  types.hpp
src/bit/: and.hpp
src/internal/simd/neon/: alias.hpp  compare.hpp  data.hpp  linear.hpp  operators.hpp  types.hpp
src/internal/simd/neon/bit/: and.hpp  lsh.hpp  not.hpp  or.hpp  rsh.hpp  xor.hpp
src/internal/simd/neon/linear/: arg.hpp  clamp.hpp  matmul.hpp  product.hpp  relu.hpp  sigmoid.hpp  sum.hpp  transpose.hpp
src/internal/simd/neon/logical/: and.hpp  or.hpp  xor.hpp
src/internal/simd/neon/math/: abs.hpp  avg.hpp  dist.hpp  exp.hpp  frac.hpp  max.hpp  mod.hpp  pow.hpp  sqrt.hpp
src/internal/simd/neon/math/log/: log10.hpp  log2.hpp
src/internal/simd/neon/math/trig/cos/: acos.hpp  acosh.hpp  cos.hpp  cosh.hpp
src/internal/simd/neon/math/trig/sin/: asin.hpp  asinh.hpp  sin.hpp  sinc.hpp  sinh.hpp
src/internal/simd/neon/math/trig/tan/: atan.hpp  atanh.hpp  tan.hpp  tanh.hpp
src/linear/: transpose.hpp
storage/: allocator.h  array.h  tensorStorage.cpp
tests/: tensor_test.cpp  test_arithmetic.cpp  test_bit.cpp  test_compare.cpp  test_data.cpp  test_logical.cpp  test_operators.cpp  test_shape.cpp  test_stride.cpp  test_tensorbool.cpp  test_types.cpp
tests/test_linear/: test_clamp.cpp  test_det.cpp  test_matmul.cpp  test_product.cpp  test_relu.cpp  test_sigmoid.cpp  test_transpose.cpp
tests/test_logical/: test_and.cpp
tests/test_math/: test_abs.cpp  test_pow.cpp  test_rem.cpp
tests/test_math/test_log/: test_log10.cpp  test_log2.cpp
tests/test_math/test_trig/test_cos/: test_acos.cpp  test_acosh.cpp  test_cos.cpp  test_cosh.cpp
tests/test_math/test_trig/test_sin/: test_asin.cpp  test_asinh.cpp  test_sin.cpp  test_sinc.cpp  test_sinh.cpp
tests/test_math/test_trig/test_tan/: test_atan.cpp  test_atanh.cpp  test_tan.cpp  test_tanh.cpp
